--- a/address-counter/pom.xml
+++ b/address-counter/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>Wagmi-Utility</artifactId>
+        <groupId>uk.co.aegisphere</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>uk.co.aegisphere</groupId>
-    <artifactId>Wagmi-Utility</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>address-counter</module>
-        <module>legendary-counter</module>
-    </modules>
+    <artifactId>address-counter</artifactId>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
